tests/typechecker/fail/026-array-slice-inv-target.hyg
let x = 42;
let arr2: array {int} = slice(x, 2, 6);
()
